style: Agregación de background.

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
     <div class="container">
         <div class="row">
+            
             <div class="col-2"></div>
             <div class="col-6 p-4">
                 <p style="color: GRAY;">HEY THERE !</p>
                 <h1>Ángela María Talamantes Castañeda.</h1>
+                
                 <div class="icons p-4">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-instagram" viewBox="0 0 16 16">
@@ -80,6 +82,18 @@
                         SEE MY WORK
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row p-3">
+            <div class="col-2"></div>
+            <div class="col-6">
+                <h1>Hobby list:</h1>
+                <ul>
+                    <li>Listen to music.</li>
+                    <li>Ride on a bike.</li>
+                    <li>Quality time with friends.</li>
+                </ul>
             </div>
         </div>
 
