--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <header>
         <ul class="nav justify-content-center p-4">
-            <li class="nav-item">
+            <!-- <li class="nav-item align-self-start"> -->
                 <img src="./images/uta.jpg" style="width: 80px;" alt="">
-            </li>
+            <!-- </li> -->
             <li class="nav-item">
                 <button type="button" class="btn btn-light" style="color: red;">HOME</button>
             </li>
@@ -97,6 +97,10 @@
             </div>
         </div>
 
+
+        <footer>
+            Talamantes Castañeda Ángela María ~ 191243 ~ 9°A.
+        </footer>
 </body>
 
 </html>
